Fixed layout issues on small devices on projects, contac and footer sections

--- a/frontend_react/src/containers/Projects/Projects.scss
+++ b/frontend_react/src/containers/Projects/Projects.scss
@@ -3,10 +3,6 @@
 {
     .main-text 
     {
-        vertical-align: middle;
-        display: table-cell;
-        max-height: 90%;
-        left: 5%;
         width: 90%;
 
         h1 
@@ -32,7 +28,6 @@
     {
         .main-text
         {
-            left: 8%;
             width: 65%;
 
             h1 
